--- a/_themes/conan/versions.html
+++ b/_themes/conan/versions.html
@@ -1,7 +1,8 @@
-
+{% if READTHEDOCS %}
 {# Add rst-badge after rst-versions for small badge style. #}
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
+      <span class="fa fa-book"> Read the Docs</span>
       v: {{ current_version }}
       <span class="fa fa-caret-down"></span>
     </span>
@@ -32,5 +33,5 @@
 
     </div>
   </div>
-
+{% endif %}
 
